@@ -32,6 +32,7 @@ package gc.stress.systemgc;
  * @requires vm.gc.Parallel
  * @summary Stress the Parallel GC full GC by allocating objects of different lifetimes concurrently with System.gc().
  * @run main/othervm/timeout=300 -Xlog:gc=info -Xmx512m -XX:+UseParallelGC gc.stress.systemgc.TestSystemGCWithParallel 270
+ * @run main/othervm/timeout=300 -XX:+UnlockDiagnosticVMOptions -XX:+UseAltGCForwarding -Xlog:gc=info -Xmx512m -XX:+UseParallelGC gc.stress.systemgc.TestSystemGCWithParallel 270
  */
 public class TestSystemGCWithParallel {
     public static void main(String[] args) throws Exception {
